tests/compile_error/compile_error.cpp
#include "compile_error.h"

int add(int x, int y)
{
    return x + y + z;
}